# dem2mesh

./: CMakeLists.txt  Dockerfile  README.md
src/: Simplify.h  main.cpp
